2005-03-08  Erez Zadok  <ezk@cs.sunysb.edu>

	* NEWS: mention new feature of executable maps.

	* AUTHORS: Acknowledge Erik Kline.

	* scripts/amd.conf.5: document executable maps and
	exec_map_timeout parameter.

	* scripts/amd.conf-sample: examples of an executable map and
	exec_map_timeout.

	* m4/macros/header_templates.m4: template for HAVE_MAP_EXEC.

	* doc/am-utils.texi: document Executable maps and exec_map_timeout
	parameter.

	* amd/conf.c (gopt_exec_map_timeout): function to parse
	exec_map_timeout [global] parameter.

	* amd/amd.h (AMFS_EXEC_MAP_TIMEOUT): define default executable map
	timeout to 10 seconds, and a global placeholder for the
	configurable value.

	* amd/amd.c (init_global_options): initialize default executable
	map timeout.

	* amd/Makefile.am (EXTRA_amd_SOURCES): include info_exec.c in
	tarball.

	* configure.in: enable executable maps.

	* amd/mapc.c: define executable map functions and behavior.

	* amd/info_exec.c: executable map implementation from Erik Kline
	<ekline at ekline dot com>, modified, cleaned-up, and fixed.

2005-03-07  Erez Zadok  <ezk@cs.sunysb.edu>

	* amd/info_file.c (file_init_or_mtime): consolidate identical
	file_init and file_mtime into one function.

2005-03-05  Erez Zadok  <ezk@cs.sunysb.edu>

	* doc/am-utils.texi (Program Filesystem): if umount/unmount are
	not specified, Amd uses "umount ${fs}" by default.

	* amd/amfs_program.c (amfs_program_match): if neither unmount nor
	umount parameters are specified, use the default userland umount
	program with "umount ${fs}".  This way type:=program doesn't have
	to specify the umount program for basic unmounting actions.
	(amfs_program_init): save unmount program string in mf_private
	only if it's NULL, not based on mf_refc.

	* configure.in: auto-detect name of userland unmount program.

	* aux_conf.h.in (UNMOUNT_PROGRAM): macro for default userland
	unmount program.

	* amd/ops_cachefs.c (cachefs_init): save unmount program string in